--- a/css/_partials/reset.css
+++ b/css/_partials/reset.css
@@ -8,3 +8,7 @@
 body{
     font-family: 'Lato';
 }
+
+ul li{
+    list-style-type: none;
+}
