--- a/css/_partials/responsive_desktop.css
+++ b/css/_partials/responsive_desktop.css
@@ -1,5 +1,9 @@
 /* min-width:992px */
 @media screen and (min-width: 992px) {
+    body{
+        font-size: var(--font-size-desktop);
+    }
+
     .container{
         width: 90%;
         height: 95vh;
@@ -7,11 +11,11 @@
     }
 
     .col-left{
-        width: 20%;
+        width: 25%;
     }
 
     .col-right{
-        width: 80%;
+        width: 75%;
     }
 
     .show-desk{
@@ -24,13 +28,5 @@
 
     .search-chat.show-desk{
         display: block;
-    }
-
-    .recent-chats{
-        overflow-y: scroll;
-    }
-
-    .recent-chat{
-        height: 14%;
     }
 }
